HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelDomainParameter/Source/Main.uv
//! Rejected structured-parallelism specimen for invalid domain constructor parameters.

public procedure parallelDomainParameterReference(context: Context) -> i32 {
    return parallel context~>cpu(1) {
        2
    }
}
